tests/expected_errors/memory_errors.err
[    INFO] --- Starting compilation of C:\Users\alecb\Programming\firescript\tests\sources\invalid\memory_errors.fire...
[   ERROR] --- Use-after-move error: variable 'owned' was moved, cannot use it here
> println(owned);  // Error: used after move
          ^
(C:\Users\alecb\Programming\firescript\tests\sources\invalid\memory_errors.fire:9:9)
[   ERROR] --- Semantic analysis failed with 1 errors
